@@ -7,47 +7,40 @@ import java.util.List;
 import java.util.Map;
 
 public class FrequencyQueries {
+    // https://www.hackerrank.com/challenges/frequency-queries/problem
     public static void main(String[] args) {
-        List<Integer> q1 = new ArrayList<>(Arrays.asList(1,1));
-        List<Integer> q2 = new ArrayList<>(Arrays.asList(2,2));
-        List<Integer> q3 = new ArrayList<>(Arrays.asList(3,2));
-        List<Integer> q4 = new ArrayList<>(Arrays.asList(1,1));
-        List<Integer> q5 = new ArrayList<>(Arrays.asList(1,1));
-        List<Integer> q6 = new ArrayList<>(Arrays.asList(2,1));
-        List<Integer> q7 = new ArrayList<>(Arrays.asList(3,2));
+        final var q1 = List.of(1, 1);
+        final var q2 = List.of(2, 2);
+        final var q3 = List.of(3, 2);
+        final var q4 = List.of(1, 1);
+        final var q5 = List.of(1, 1);
+        final var q6 = List.of(2, 1);
+        final var q7 = List.of(3, 2);
 
-        List<List<Integer>> queries = new ArrayList<>();
-        queries.add(q1);
-        queries.add(q2);
-        queries.add(q3);
-        queries.add(q4);
-        queries.add(q5);
-        queries.add(q6);
-        queries.add(q7);
-
+        final var queries = new ArrayList<>(List.of(q1, q2, q3, q4, q5, q6, q7));
         System.out.println(freqQuery(queries));
     }
 
-    static List<Integer> freqQuery(List<List<Integer>> queries) {
-        Map<Integer, Integer> result = new HashMap<>();
-        List<Integer> results = new ArrayList<>();
+    public static List<Integer> freqQuery(final List<List<Integer>> queries) {
+        final var result = new HashMap<Integer, Integer>();
+        final var results = new ArrayList<Integer>();
+
         for (List<Integer> query : queries) {
             Integer op = query.get(0);
             Integer num = query.get(1);
 
             switch (op) {
                 case 1:
-                    int add = result.get(num) != null ? result.get(num) + 1 : 1;
+                    final var add = result.getOrDefault(num, 0) + 1;
                     result.put(num, add);
                     break;
                 case 2:
-                    int rm = result.get(num) != null ? result.get(num) - 1 : 0;
-                    if (rm == 0) {
+                    final var rm = result.getOrDefault(num, 0) - 1;
+                    if (rm <= 0) {
                         result.remove(num);
                     } else {
                         result.put(num, rm);
                     }
-
                     break;
                 case 3:
                     if (result.containsValue(num)) {
